# rust-decimal

./: .buildnumber  .editorconfig  .gitignore  .travis.yml  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  VERSION.md  autoresearch.ideas.md  build.rs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: main.yml
.travis/: bench.sh  pg_hba.conf  setup.sh
benches/: bench_main.rs  comparison.rs  comparitive.rs  lib_benches.rs  libraries.rs  std_ops.rs
dbg/lldb/: README.md  decimal_printer.py
decimal/src/: lib.rs  serde_types.rs
decimal/tests/: decimal_tests.rs
decimal_macro/: Cargo.toml
decimal_macro/src/: lib.rs
decimal_macro/tests/: macro_tests.rs
examples/: README.md  rkyv-remote.rs
examples/serde-json-scenarios/: Cargo.toml
examples/serde-json-scenarios/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: arithmetic.rs  constructors.rs
fuzzer/: Cargo.toml  README.md
fuzzer/src/: command.rs  main.rs
macro_impl/: Cargo.toml
macro_impl/src/: lib.rs
macros/: Cargo.toml  Makefile.toml
macros/src/: lib.rs  parser.rs  str.rs
macros/tests/: macro_tests.rs
macros/tests/invalid/: large_scale.rs  large_scale.stderr  too_big.rs  too_big.stderr  too_small.rs  too_small.stderr
make/: benchmark.toml  tests.toml  utils.toml
make/scripts/: version.rs
make/tests/: db.toml  maths.toml  misc.toml  serde.toml  wasm.toml
parser/: Cargo.toml  Makefile.toml  base_10.rs  mod.rs  scientific.rs
parser/src/: base_10.rs  lib.rs  scientific.rs
src/: arithmetic_impls.rs  borsh.rs  constants.rs  db.rs  decimal.rs  error.rs  fuzz.rs  lib.rs  maths.rs  mysql.rs  ops.rs  parser.rs  postgres.rs  proptest.rs  rand.rs  rand_0_10.rs  rand_0_9.rs  rocket.rs  serde.rs  serde_types.in.rs  serde_types.rs  str.rs  wasm.rs
src/mysql/: diesel.rs
src/ops/: add.rs  array.rs  cmp.rs  common.rs  div.rs  legacy.rs  mul.rs  rem.rs  sub.rs  wide.rs
src/postgres/: common.rs  diesel.rs  driver.rs
src/str/: fmt.rs  fmt_sci.rs  parse.rs  parse_radix.rs  parse_sci.rs
tests/: decimal_tests.rs  macros.rs  wasm.rs
