[package]
name = "rust_decimal_fuzzer"
version = "1.9.0"
authors = ["Paul Mason <paul@form1.co.nz>"]
edition = "2018"

[[bin]]
name = "fuzzer"
path = "src/main.rs"

[dependencies]
clap = "2.32.0"
decimal = "2.0.4"
rand = "0.7"
rust_decimal = { path = "../" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
