[package]
name = "rust_decimal_macro_impls"
version = "0.11.1"
authors = ["Paul Mason <paul@form1.co.nz>"]

description = "Shorthand macros to assist creating Decimal types. Do not depend on this directly; use rust_decimal_macros"
documentation = "https://docs.rs/rust_decimal/"
repository = "https://github.com/paupino/rust-decimal"
readme = "../README.md"

keywords = ["decimal","financial","fixed","precision"]
categories = ["science","data-structures"]

license = "MIT"

[badges]
travis-ci = { repository = "paupino/rust-decimal", branch = "master" }

[dependencies]
rust_decimal = { path = "../", version = "0.11.1" }
proc-macro-hack = "0.5"
quote = "0.6"

[lib]
proc-macro = true
