[package]
name = "rust_decimal_macros"
version = "1.34.1"
authors = ["Paul Mason <paul@form1.co.nz>"]
edition = "2021"
description = "Shorthand macros to assist creating Decimal types."
documentation = "https://docs.rs/rust_decimal/"
repository = "https://github.com/paupino/rust-decimal"
readme = "../README.md"
keywords = ["decimal","financial","fixed","precision"]
categories = ["science","data-structures"]
license = "MIT"

[dependencies]
# This needs to be a locked version until we can remove this dependency altogether
rust_decimal = { version = "=1.33.1", default-features = false }
quote = "1.0"

[dev-dependencies]
trybuild = "1.0.55"

[features]
default = []
reexportable = []

[lib]
proc-macro = true
