[package]
name = "serde-json-scenarios"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
rust_decimal = { path = "../..", features = ["macros", "serde-with-arbitrary-precision"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"]}
